...
    <string name="other_active_tasks">其他待办</string>
    <string name="tasks_title">全部任务</string>
    <string name="agent_title">安排助手</string>
    <string name="time_title">时间安排</string>
    <string name="mine_title">我的设置</string>
    <string name="add_task">新增任务</string>
    <string name="edit_task">编辑任务</string>
    <string name="task_detail">任务详情</string>
    <string name="back">返回</string>
    <string name="task_name">任务名称</string>
    <string name="task_name_hint">例如：学习大学物理</string>
    <string name="task_description">任务描述</string>
    <string name="task_description_hint">例如：整理课程笔记并完成练习</string>
...
